ft/src/tui/snapshots/ft__tui__tests__graph_tab_preset_picker_open.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
>                                                                               
 1: node where path = "…   2: (empty)                                           
┌ (empty) ─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│press / to edit┌ find ────────────────────────────────────────┐               │
│               │type to search…                               │               │
│               └──────────────────────────────────────────────┘               │
│               ┌ recent · type to search ─────────────────────┐               │
│               │▶ fs                                          │               │
│               │  ghosts                                      │               │
│               │  links                                       │               │
│               │  tasks-in-fs                                 │               │
│               │  tree                                        │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph            Enter:confirm  Esc:cancemodal: preset-pi
