ft/src/tui/snapshots/ft__tui__tests__graph_tab_search_picker_open.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
 1: node where kind = D…                                                        
▶   D /                                                                         
press / to edit query                                                           
                                                                                
                ┌ find ────────────────────────────────────────┐                
                │type to search…                               │                
                └──────────────────────────────────────────────┘                
                ┌ recent · type to search ─────────────────────┐                
                │▶ /                                           │                
                │  Areas/  ·  /                                │                
                │  Projects/  ·  /                             │                
                │  root  ·  /                                  │                
                │  operations/  ·  /Areas                      │                
                │  finance  ·  /Areas                          │                
                │  alpha  ·  /Projects                         │                
                │  shifts  ·  /Areas/operations                │                
                └──────────────────────────────────────────────┘                
                Enter: jump · Esc: cancel                                       
                                                                                
                                                                                
                                                                                
> node where kind = Directory and path = ""; expand where edge.kind = directory-
 vault: vault  ·  tab: Graph            Enter:confirm  Esc:cance  modal: search
