ft/src/tui/snapshots/ft__tui__tests__graph_tab_strip_two_views_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks                              
 1: node where kind = D…   2: (empty)                                           
                                                                                
press / to edit query                                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
>                                                                               
 vault: vault  ·  tab: Graph               refreshed [HH:MM:SS]      mode: normal
