ft/src/tui/snapshots/ft__tui__tests__help_overlay_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Graph                
                ┌ help ────────────────────────────────────────┐                
                │Keybindings                                   │                
                │                                              │                
                │  q / Ctrl+C        quit                      │                
                │  ?                 toggle this help          │                
                │  Tab / Shift+Tab   next / previous tab       │                
         ██╗    │  1 / 2             jump to tab N             │██████╗         
         ██║    │  g s               git sync                  │█╔════╝         
         ██║ █╗ │  /                 edit query                │████╗           
         ██║███╗│  ↑ / ↓ · j / k     select task               │█╔══╝           
         ╚███╔██│  ] / [             due date +1d / -1d        │██████╗         
          ╚══╝╚═│  } / {             scheduled +1d / -1d       │══════╝         
                │  t                 set due to today          │                
                │  p / P             priority cycle fwd / back │                
                │  x / X             complete / cancel         │                
               p│  e                 open edit popup           │p               
                │  c / Shift+C       new task (line / form)    │                
                │  Ctrl+E            expand quickline → form   │                
                │  Enter (target)    open file/heading picker  │                
                │  Enter             open task in $EDITOR      │                
                │  R                 reload vault              │                
                └──────────────────────────────────────────────┘                
 vault: test-vault  ·  tab: Welcome         not yet refreshed        mode: help
