ft/src/tui/snapshots/ft__tui__tests__help_overlay_graph_scrolled_down_80x24.snap
---
source: ft/src/tui/tests.rs
expression: down
---
  1 Graph ┌ help ────────────────────────────────────────────────────┐ Review   
>         │  Tab            Switch to the next tab                  ║│          
 1: (empty│  BackTab        Switch to the previous tab              ║│          
┌ (empty) │  1..9           Switch to the tab at the given 0-based i█│─────────┐
│         │                                                         █│         │
│press / t│  Views                                                  █│         │
│         │  Ctrl+n         Add a new view (pick preset or blank)   █│         │
│         │  Ctrl+p         Load a preset into the active view      █│         │
│         │  Ctrl+w         Close the active view                   ║│         │
│         │  Ctrl+PageDown  Switch to the next view                 ║│         │
│         │  Ctrl+PageUp    Switch to the previous view             ║│         │
│         │  Alt+1..Alt+9   Switch to the view at the given 0-based ║│         │
│         │                                                         ║│         │
│         │  Notes                                                  ║│         │
│         │  Shift+r        Open the Related-section updater modal f║│         │
│         │  Shift+j        Open the Journal tab for the selected no║│         │
│         │  Ctrl+j         Append selected (or cursor) Note/Ghost r║│         │
│         │  o              Open the selected note in $EDITOR       ║│         │
│         │  Ctrl+o         Open the selected note in Obsidian      ║│         │
│         │  c              Create a new note (blank) in the selecte║│         │
│         │  Shift+c        Create a new note from a template       ║│         │
│         │  Shift+a        Append a template to the selected note  ║│         │
└─────────└──────────────────────────────────────────────────────────┘─────────┘
 vault: test-vault  ·  tab: Graph           not yet refreshed        mode: help
