ft/src/tui/snapshots/ft__tui__tests__help_overlay_graph_scrolled_top_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 3284
expression: top
---
  1 Graph ┌ help ────────────────────────────────────────────────────┐ Review   
>         │Keybindings — Graph                                      █│          
 1: (empty│                                                         █│          
┌ (empty) │  Global                                                 █│─────────┐
│         │  q / Ctrl+c     Quit the TUI                            █│         │
│press / t│  ?              Open the keymap help overlay            █│         │
│         │  g              Enter the git-sync leader (then `s` to s║│         │
│         │  Tab            Switch to the next tab                  ║│         │
│         │  BackTab        Switch to the previous tab              ║│         │
│         │  1..9           Switch to the tab at the given 0-based i║│         │
│         │                                                         ║│         │
│         │  Views                                                  ║│         │
│         │  Ctrl+n         Add a new view (pick preset or blank)   ║│         │
│         │  Ctrl+p         Load a preset into the active view      ║│         │
│         │  Ctrl+w         Close the active view                   ║│         │
│         │  Ctrl+PageDown  Switch to the next view                 ║│         │
│         │  Ctrl+PageUp    Switch to the previous view             ║│         │
│         │  Alt+1..Alt+9   Switch to the view at the given 0-based ║│         │
│         │                                                         ║│         │
│         │  Notes                                                  ║│         │
│         │  Shift+r        Open the Related panel for the selected ║│         │
│         │  Shift+j        Open the Journal tab for the selected no║│         │
└─────────└──────────────────────────────────────────────────────────┘─────────┘
 vault: test-vault  ·  tab: Graph           not yet refreshed        mode: help
