ft/src/tui/snapshots/ft__tui__tests__help_overlay_over_tasks_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph ┌ help ────────────────────────────────────────────────────┐          
┌ sidebar │Keybindings — Tasks                                       │─────────┐
│         │                                                          │5-18     │
│ Sun 10 M│  Global                                                  │─────────┘
│ 14:32:05│  q / Ctrl+c  Quit the TUI                                │─────────┐
│         │  ?           Open the keymap help overlay                │         │
│ ── views│  g           Enter the git-sync leader (then `s` to sync)│         │
│ ▶ Search│  Tab         Switch to the next tab                      │         │
│         │  BackTab     Switch to the previous tab                  │         │
│         │  1..9        Switch to the tab at the given 0-based index│         │
│         │                                                          │026-05-11│
│         │  Sidebar                                                 │         │
│         │  ↑           Select the previous view in the sidebar     │         │
│         │  ↓           Select the next view in the sidebar         │         │
│         │  Enter       Confirm the sidebar's selected view (no-op f│         │
│         │                                                          │         │
│         │  press ? or Esc to close                                 │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
└─────────└──────────────────────────────────────────────────────────┘─────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]        mode: help
