ft/src/tui/snapshots/ft__tui__tests__help_overlay_with_keymap_override_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 8246
expression: frame
---
  1 Graph ┌ help ────────────────────────────────────────────────────┐ Review   
>         │Keybindings — Graph                                       │          
 1: (empty│                                                          │          
┌ (empty) │  Global                                                  │─────────┐
│         │  Ctrl+c / x     Quit the TUI                             │         │
│press / t│  ?              Open the keymap help overlay             │         │
│         │  g              Enter the git-sync leader (then `s` to sy│         │
│         │  Tab            Switch to the next tab                   │         │
│         │  BackTab        Switch to the previous tab               │         │
│         │  1..9           Switch to the tab at the given 0-based in│         │
│         │                                                          │         │
│         │  Views                                                   │         │
│         │  Ctrl+n         Add a new view (pick preset or blank)    │         │
│         │  Ctrl+p         Load a preset into the active view       │         │
│         │  Ctrl+w         Close the active view                    │         │
│         │  Ctrl+PageDown  Switch to the next view                  │         │
│         │  Ctrl+PageUp    Switch to the previous view              │         │
│         │  Alt+1..Alt+9   Switch to the view at the given 0-based i│         │
│         │                                                          │         │
│         │  Notes                                                   │         │
│         │  Shift+r        Open the Related-section updater modal fo│         │
│         │  Shift+j        Open the Journal tab for the selected not│         │
└─────────└──────────────────────────────────────────────────────────┘─────────┘
 vault: keymap-vault  ·  tab: Graph         not yet refreshed        mode: help
