ft/src/tui/snapshots/ft__tui__tests__journal_entry_blocks_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ Journal — 2 sources (2 entries) ─────────────────────────────────────────────┐
│Sources (2)                                                                   │
│Foo (ghost), Bar (ghost)                                                      │
│● 2026-05-10  Alpha                                                           │
│    ↳ matched: Foo                                                            │
│Talk about [[Foo]].                                                           │
│                                                                              │
│  2026-05-10  Beta                                                            │
│    ↳ matched: Foo, Bar                                                       │
│Mention [[Foo]] and [[Bar]] together.                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Journal              not yet refreshed      mode: normal
