ft/src/tui/snapshots/ft__tui__tests__new_popup_blank_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│                      ││not done and due before 2026-05-18 sort by due, priori│
│ Sun 10 May           │└──────────────────────────────────────────────────────┘
│ 14:32:05             │┌ tasks ───────────────────────────────────────────────┐
│                      ││       ┌ new task ────────────────────────────┐       │
│ ── views ──          ││       │                                      │       │
│ ▶ Search             ││       │  description : │                     │       │
│                      ││       │       target :                       │       │
│                      ││       │          due :                       │       │
│                      ││       │    scheduled :                       │       │
│                      ││       │     priority :                       │       │
│                      ││       │         tags :                       │       │
│                      ││       │   recurrence :                       │       │
│                      ││       │                                      │       │
│                      ││       │  Tab/Shift+Tab next · Ctrl+S save · E│       │
│                      ││       │                                      │       │
│                      ││       │                                      │       │
│                      ││       └──────────────────────────────────────┘       │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
